2018-01-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/NSNumber+GNUstepBase.m:
	* Source/GSValue.m:
	* Tools/gdomap.c:
	Fix various small issues picked by by automated checker.

2018-01-19  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/Makefile.postamble: Restore optimisation flags (remove 18
	years ago) for NSInvocation and NSConnection (and remove obsolete
	mframe setting) as suggested by Yavor Doganov.
		
2018-01-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Improve exception message when performing a
	selector on a finished thread.
	* Source/NSTask.m: Do not try to notify task completion on a thread
	that is not executing.
	* configure.ac: Fix for older versions of pkg-config
	* configure: regenerate

2018-01-14  Yavor Doganov  <yavor@gnu.org>
 
 	* Tests/base/NSXMLDocument/basic.m:
 	* Tests/base/NSXMLDocument/cdata.m:
 	* Tests/base/NSXMLNode/basic.m:
 	* Tests/base/NSXMLElement/attributes.m:
 	* Tests/base/NSXMLElement/basic.m:
 	* Tests/base/NSXMLElement/children.m:
 	* Tests/base/NSXMLElement/transfer.m:
 	* Tests/base/NSXMLNode/children.m:
 	* Tests/base/NSXMLNode/description.m:
 	* Tests/base/NSXMLNode/kinds.m:
 	* Tests/base/NSXMLNode/namespaces.m: Skip tests if libxml2 is not
 	available.
 	* Tests/base/NSTimeZone/use.m: Skip one more test if
 	NSLOCALE_SUPPORTED is undefined.
 	* Tests/base/NSRegularExpression/basic.m: Skip all tests if ICU is
 	not available.

2018-01-14  Richard Frith-Macdonald <rfm@gnu.org>

 	* configure.ac: Remove explicit test for SAX2.h as we now assume
	it is present based on the version of libxml2.
	* configure: regenerate
	* Source/GSXML.m: fix errors in loading/resolving of external entities
	and fix the parsing methods to correctly return whether the xml was
	validated against a DTD (when that feature is turned on).
	* Tests/base/GSXML/basic.m: add a couple of tests for resolving
	external references and validating against a DTD.

2018-01-14  Yavor Doganov  <yavor@gnu.org>
 